@@ -1,11 +1,29 @@
 <?php
-// $Id: file.mimetypes.inc,v 1.3 2009/07/20 19:02:38 dries Exp $
+// $Id: file.mimetypes.inc,v 1.4 2009/08/31 05:47:33 dries Exp $
 
 /**
  * @file
  * Provides mimetype mappings.
  */
 
+/**
+ * Return an array of MIME extension mappings.
+ *
+ * Returns the mapping after modules have altered the default mapping.
+ *
+ * @return
+ *   Array of mimetypes correlated to the extensions that relate to them.
+ * @see file_get_mimetype()
+ */
+function file_mimetype_mapping() {
+  $mapping = &drupal_static(__FUNCTION__);
+  if (!isset($mapping)) {
+    $mapping = file_default_mimetype_mapping();
+    // Allow modules to alter the default mapping.
+    drupal_alter('file_mimetype_mapping', $mapping);
+  }
+  return $mapping;
+}
 
 /**
  * Default MIME extension mapping.
